--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~4.5.16",
     "@coreui/utils": "^2.0.2",
+    "@stripe/stripe-js": "^2.1.11",
     "chart.js": "^3.9.1",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
+    "ngx-stripe": "^17.0.0",
     "rxjs": "~7.8.1",
+    "stripe-angular": "^1.9.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
   },
